# catkin_ws

./: .gitignore  README.md  errors  errors.txt
config/: rviz_simulator_config.rviz
launch/: control.launch
src/: .rosinstall  .rosinstall.bak
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Detection.msg
src/depthai_publisher/: CMakeLists.txt  package.xml
src/depthai_publisher/scripts/: espeak_subscriber  espeak_subscriber1.py  espeak_subscriber2
src/depthai_publisher/src/depthai_publisher/: aruco_subscriber.py  dai_publisher_yolov5_runner.py
src/depthai_publisher/src/depthai_publisher/models/model4/: model4.json
src/depthai_publisher/src/depthai_publisher/models/model5v2/: model5v2.json
src/egh450_target_solvepnp/: CMakeLists.txt  package.xml
src/egh450_target_solvepnp/launch/: pose_estimator.launch
src/egh450_target_solvepnp/scripts/: pose_estimator_target
src/egh450_target_solvepnp/src/egh450_target_solvepnp/: pose_estimator.py  pose_estimator_target.py
src/qutas_lab_450/launch/: environment.launch
src/spar/: README.md
src/spar/spar_node/: CMakeLists.txt  package.xml
src/spar/spar_node/launch/: demo_wp_roi.launch  test.launch
src/spar/spar_node/scripts/: demo_wp  demo_wp_roi  payload  tf2_broadcaster_frames  tf2_broadcaster_target  tf2_listener
utility_scripts/: ip_notifier.py
