<?xml version="1.0"?>
<package format="2"> <!--- Update format to 2 -->
  <name>custom_msgs</name> 
  <version>0.0.0</version>
  <description>The custom_msgs package</description>

  <maintainer email="thouardkai@gmail.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend> 

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>